# ChangeLog for xfce-base/xfce4-extras
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-extras/ChangeLog,v 1.83 2008/08/05 21:05:46 cardoe Exp $

  05 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  17 Dec 2007; Jeroen Roovers <jer@gentoo.org> xfce4-extras-4.4.2.ebuild:
  Stable for HPPA (bug #201747).

  12 Dec 2007; Brent Baude <ranger@gentoo.org> xfce4-extras-4.4.2.ebuild:
  Marking xfce4-extras-4.4.2 ppc64 stable for bug 201747

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> xfce4-extras-4.4.2.ebuild:
  alpha/ia64/sparc stable wrt #201747

  09 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  xfce4-extras-4.4.2.ebuild:
  ppc stable, bug #201747

  09 Dec 2007; Dawid Węgliński <cla@gentoo.org> xfce4-extras-4.4.2.ebuild:
  Stable on amd64/x86 (bug #201747)

  02 Dec 2007; Samuli Suominen <drac@gentoo.org> xfce4-extras-4.4.2.ebuild:
  Revert ristretto for now, so we don't have to drop ~hppa keyword.

*xfce4-extras-4.4.2 (30 Nov 2007)

  30 Nov 2007; Samuli Suominen <drac@gentoo.org> +xfce4-extras-4.4.2.ebuild:
  Version bump, introducing xfce-extra/ristretto.

  14 Oct 2007; Markus Rothe <corsair@gentoo.org>
  xfce4-extras-4.4.1-r1.ebuild:
  Stable on ppc64; bug #195250

  01 Sep 2007; nixnut <nixnut@gentoo.org> xfce4-extras-4.4.1-r1.ebuild:
  Stable on ppc wrt bug 190072

  30 Aug 2007; Jeroen Roovers <jer@gentoo.org> xfce4-extras-4.4.1-r1.ebuild:
  Stable for HPPA (bug #190072).

  04 Jul 2007; Christoph Mende <angelos@gentoo.org>
  xfce4-extras-4.4.1-r1.ebuild:
  Stable on amd64

  03 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  xfce4-extras-4.4.1-r1.ebuild:
  Stable on sparc

  03 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  xfce4-extras-4.4.1-r1.ebuild:
  alpha/ia64/x86 stable

*xfce4-extras-4.4.1-r1 (14 Jun 2007)

  14 Jun 2007; Samuli Suominen <drac@gentoo.org>
  +xfce4-extras-4.4.1-r1.ebuild: