@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfce4-extras-4.4.2.ebuild 1650 RMD160 8a342a7aa788a4cbe0837409cf130744cbfe79e7 SHA1 0c056ed6c110f0893945bf03ac6f12c7e9a6df5b SHA256 9206a56cb9e48415b3aca0ab37ee3ccb8905199047bf333362e42f8b7e747d24
-MISC ChangeLog 10959 RMD160 2bf89c7035ea1a00a1dc22372a8b80ca9d4896e1 SHA1 aa2c42c7b5e64bb615ca6df08b38ffba54c260ea SHA256 7a42bc8769c61081d9ea51940190a7ebc7b8281d8086849b235060960679ad6b
+EBUILD xfce4-extras-4.4.2.ebuild 1660 RMD160 ab1463a3375393f6ffa757f6abcf8f6c0c4764c0 SHA1 66d9045d53d1bb66ea79cf0aa9b18687a3d1161b SHA256 b085ae2efaba1dc7eb6448780d226efc7ac920dcccd503b7fe6fb4cfed8829d2
+MISC ChangeLog 11093 RMD160 719fc6be099be311741e0878507ecbe3f833afc3 SHA1 af671ebb53719a08830d86bad48cbec9af755339 SHA256 a10f45e073c196a563980e517303c91caafc4fc272eb3b605f52adcb9196c358
 MISC metadata.xml 347 RMD160 778d9e4a195365f3ced0b6041c37cd8db8086f14 SHA1 0b244ef7aa47b22f43417aec021b74e39a4cb782 SHA256 caf2d216ba2820799217e0bad0bdc19a24443ac096047b3615af08f6a14ab9b3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkiYwLAACgkQoeSe8B0zEfzBqwCggRq58v66Qk9crpDmlsGceBDW
-QOYAnAhIzHXPbyYc0+BOBPNzAdDOv0M+
-=9tBT
+iEYEARECAAYFAkmQia4ACgkQKhnDs22gwa/MTgCeJYxdTYKnd+dPMfdvlgH+aoqY
+0m8AnRmYMyIXlUaKmvQNASbQFwUGcSQu
+=sOeo
 -----END PGP SIGNATURE-----
